--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>УНИВЕРСУМ ПредВечной ПраМатери</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
-    <style>
+<style>
 .image-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
@@ -15,8 +15,10 @@
 }
 
 .grid-item {
-    position: relative;
-    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
     border-radius: 12px;
     border: 1px solid #40E0D0;
     box-shadow: 0 0 20px rgba(64, 224, 208, 0.3);
@@ -30,9 +32,10 @@
 }
 
 .grid-item img {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
+    max-width: 100%;
+    max-height: 300px;
+    width: auto;
+    height: auto;
     display: block;
 }
 </style>
