--- a/index.html
+++ b/index.html
@@ -7,33 +7,32 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
 <style>
-.image-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+.flex-gallery {
+    display: flex;
+    flex-wrap: wrap;
     gap: 1.5rem;
+    justify-content: center;
     margin: 2rem 0;
 }
 
-.grid-item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.flex-item {
+    flex: 0 1 auto;
     padding: 1rem;
-    border-radius: 12px;
-    border: 1px solid #40E0D0;
-    box-shadow: 0 0 20px rgba(64, 224, 208, 0.3);
-    background: rgba(60, 10, 40, 0.5);
+    border-radius: 10px;
+    border: 1px solid rgba(64, 224, 208, 0.4);
+    background: rgba(60, 10, 40, 0.6);
+    box-shadow: 0 0 15px rgba(64, 224, 208, 0.2);
     transition: all 0.3s ease;
 }
 
-.grid-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 0 30px rgba(64, 224, 208, 0.5);
+.flex-item:hover {
+    border-color: #40E0D0;
+    box-shadow: 0 0 25px rgba(64, 224, 208, 0.4);
 }
 
-.grid-item img {
+.flex-item img {
     max-width: 100%;
-    max-height: 300px;
+    max-height: 250px;
     width: auto;
     height: auto;
     display: block;
@@ -283,27 +282,27 @@
 
             <div class="final-line"></div>
 
-            <div class="image-grid">
-                <div class="grid-item">
-                    <img src="image (1).jpg" alt="Описание" loading="lazy">
+            <div class="flex-gallery">
+                <div class="flex-item">
+                    <img src="image (1).jpg" alt="Описание">
                 </div>
-                <div class="grid-item">
-                    <img src="image (2).jpg" alt="Описание" loading="lazy">
+                <div class="flex-item">
+                    <img src="image (2).jpg" alt="Описание">
                 </div>
-                <div class="grid-item">
-                    <img src="image (3).jpg" alt="Описание" loading="lazy">
+                <div class="flex-item">
+                    <img src="image (3).jpg" alt="Описание">
                 </div>
-                <div class="grid-item">
-                    <img src="image (4).jpg" alt="Описание" loading="lazy">
+                <div class="flex-item">
+                    <img src="image (4).jpg" alt="Описание">
                 </div>
-                <div class="grid-item">
-                    <img src="image (5).jpg" alt="Описание" loading="lazy">
+                <div class="flex-item">
+                    <img src="image (5).jpg" alt="Описание">
                 </div>
-                <div class="grid-item">
-                    <img src="image (6).jpg" alt="Описание" loading="lazy">
+                <div class="flex-item">
+                    <img src="image (6).jpg" alt="Описание">
                 </div>
-                <div class="grid-item">
-                    <img src="image (7).jpg" alt="Описание" loading="lazy">
+                <div class="flex-item">
+                    <img src="image (7).jpg" alt="Описание">
                 </div>
             </div>
             
