--- a/index.html
+++ b/index.html
@@ -7,35 +7,48 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="navigation.css">
 <style>
-.flex-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.5rem;
-    justify-content: center;
+.masonry-grid {
+    column-count: 3;
+    column-gap: 1.5rem;
     margin: 2rem 0;
 }
 
-.flex-item {
-    flex: 0 1 auto;
+.masonry-item {
+    break-inside: avoid;
+    margin-bottom: 1.5rem;
+}
+
+.image-container {
     padding: 1rem;
-    border-radius: 10px;
+    border-radius: 8px;
     border: 1px solid rgba(64, 224, 208, 0.4);
     background: rgba(60, 10, 40, 0.6);
     box-shadow: 0 0 15px rgba(64, 224, 208, 0.2);
+    text-align: center;
     transition: all 0.3s ease;
 }
 
-.flex-item:hover {
+.image-container:hover {
     border-color: #40E0D0;
     box-shadow: 0 0 25px rgba(64, 224, 208, 0.4);
 }
 
-.flex-item img {
+.image-container img {
     max-width: 100%;
-    max-height: 250px;
-    width: auto;
     height: auto;
-    display: block;
+    display: inline-block;
+}
+
+@media (max-width: 768px) {
+    .masonry-grid {
+        column-count: 2;
+    }
+}
+
+@media (max-width: 480px) {
+    .masonry-grid {
+        column-count: 1;
+    }
 }
 </style>
 </head> 
@@ -282,27 +295,41 @@
 
             <div class="final-line"></div>
 
-            <div class="flex-gallery">
-                <div class="flex-item">
-                    <img src="image (1).jpg" alt="Описание">
+            <div class="masonry-grid">
+                <div class="masonry-item">
+                    <div class="image-container">
+                        <img src="image (1).jpg" alt="Описание">
+                    </div>
                 </div>
-                <div class="flex-item">
-                    <img src="image (2).jpg" alt="Описание">
+                <div class="masonry-item">
+                    <div class="image-container">
+                        <img src="image (2).jpg" alt="Описание">
+                    </div>
                 </div>
-                <div class="flex-item">
-                    <img src="image (3).jpg" alt="Описание">
+                <div class="masonry-item">
+                    <div class="image-container">
+                        <img src="image (3).jpg" alt="Описание">
+                    </div>
                 </div>
-                <div class="flex-item">
-                    <img src="image (4).jpg" alt="Описание">
+                <div class="masonry-item">
+                    <div class="image-container">
+                        <img src="image (4).jpg" alt="Описание">
+                    </div>
                 </div>
-                <div class="flex-item">
-                    <img src="image (5).jpg" alt="Описание">
+                <div class="masonry-item">
+                    <div class="image-container">
+                        <img src="image (5).jpg" alt="Описание">
+                    </div>
                 </div>
-                <div class="flex-item">
-                    <img src="image (6).jpg" alt="Описание">
+                <div class="masonry-item">
+                    <div class="image-container">
+                        <img src="image (6).jpg" alt="Описание">
+                    </div>
                 </div>
-                <div class="flex-item">
-                    <img src="image (7).jpg" alt="Описание">
+                <div class="masonry-item">
+                    <div class="image-container">
+                        <img src="image (7).jpg" alt="Описание">
+                    </div>
                 </div>
             </div>
             
