--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
 }
 
 #modalImage {
-    max-height: 400px !important;
-    max-width: 100% !important;
-    height: auto !important;
-    width: auto !important;
+    max-height: 600px;
+    max-width: 100%;
+    height: auto;
+    width: auto;
     border-radius: 15px;
     box-shadow: 0 0 50px rgba(64, 224, 208, 0.5);
     border: 3px solid #40E0D0;
-    object-fit: contain !important;
+    object-fit: contain;
 }
 
 /* Крестик закрытия */
@@ -159,16 +159,14 @@
     right: -80px;
 }
 
-/* Счетчик - ПОД картинкой */
 .image-counter {
     color: #40E0D0;
     font-size: 1.3rem;
     text-shadow: 0 0 10px rgba(64, 224, 208, 0.8);
     background: none;
-    padding: 10px 20px;
-    border-radius: 20px;
-    border: 1px solid #40E0D0;
-    background: rgba(64, 224, 208, 0.1);
+    padding: 0;
+    border: none;
+    margin-top: 15px;
 }
 
 /* Адаптивность */
